feat(mail): support multi recipients and add unit tests
gravitee-io/issues#6992